-------------------------------------
	4.3-1	
-------------------------------------

Fixed bug that would not stop the Global Preferences dialog from
being displayed when $noAuth was enabled or some other auth method
was set in config.php
https://sourceforge.net/p/phpvirtualbox/bugs/7/

Fixed JavaScript error when $enforceVMOwnership is enabled
https://sourceforge.net/p/phpvirtualbox/bugs/9/

-------------------------------------
	4.3-0	2013-10-17
-------------------------------------
VirtualBox 4.3.x support.

Fixed behavior when a VM is inaccessible.

Fixed Clone VM Wizard bug that would not keep MAC addresses even
when 'Reinitialize MAC address...' was not set
https://sourceforge.net/p/phpvirtualbox/bugs/3/

Fixed bug that would not allow a VM to be powered off if it stuck
https://sourceforge.net/p/phpvirtualbox/bugs/5/

-------------------------------------
	4.2-8	2013-10-15
-------------------------------------
Updated media menus to indicate which media is already mounted
by the given virtual machine.

Minor UI enhancements.

Fixed bug when collapsing and expanding the Preview box in VM
details sections that would leave an arrow image drawn over the
preview image.

Removed bug workarounds for old version of Opera.

Minor translation bug fixes.

Added VNC viewer for VirtualBox-OSE with VNC support
(experimental).

VRDE port in the Details pane is now a vnc:// link if VirtualBox
with VNC support is detected and the VM is running.

-------------------------------------
	4.2-7	2013-08-12
-------------------------------------
Upgraded jQuery from 1.8.2 to 1.10.2. Updated code to reflect
library changes.

Upgraded jQuery-UI from 1.8.23 to 1.10.3. Updated code to reflect
library changes.

Consolidated some JavaScript, and CSS files where possible.

Minor translation fixes.

Some VM properties are now editable when a VM is in a Saved state.

Fixed bug when selecting a medium by location where it would have
to be selected twice.