@@ -106,8 +106,8 @@
 					 browser may display the PHP error message.</p>\
 					 <p>If find that this is not the case,\
 					 or have no idea what this error message means, please raise the issue\
-					 at <a href='http://code.google.com/p/phpvirtualbox/issues/list'\
-					 >http://code.google.com/p/phpvirtualbox/issues/list</a></p>",{'width':'50%'});
+					 at <a href='http://sourceforge.net/p/phpvirtualbox/discussion/help/'\
+					 >http://sourceforge.net/p/phpvirtualbox/discussion/help/",{'width':'50%'});
 				return;
 			}
 			
