@@ -2,7 +2,7 @@
 <div style='text-align: center'>
 <h3 align='center' id='vboxAboutHeader'>phpVirtualBox X -/- VirtualBox X compatible</h3>
 <p style='text-align: center'>Copyright (C) 2010-2013 Ian Moore (imoore76 at yahoo dot com) - <a href='LICENSE.txt' target='_new'>LICENSE</a></p>
-<p style='text-align: center'><a target='_blank' href='http://code.google.com/p/phpvirtualbox/'>http://code.google.com/p/phpvirtualbox/</a></p>
+<p style='text-align: center'><a target='_blank' href='http://sourceforge.net/projects/phpvirtualbox/'>http://sourceforge.net/projects/phpvirtualbox/</a></p>
 <p style='text-align: left'>
 I develop and support phpVirtualBox in my spare time - free of charge. I do not receive payments from VirtualBox (Oracle) nor am
 I affiliated with them in any way. If you find this program useful, I ask that you please donate.
